# mrpohos

./: .gitignore  GITHUB_README.md  LICENSE  LICENSE_COMPLIANCE.md  OPEN_SOURCE_NOTICES.md  OPEN_SOURCE_PAGE_GUIDE.md  README.md  RENAME_SUMMARY.md  build-profile.json5  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  opencode.json  simple_dump_mrpohos_20260416164551052.txt  simple_dump_mrpohos_20260416165701504.txt  simple_dump_mrpohos_20260417000616188.txt  simple_dump_mrpohos_20260417093126178.txt  sync_log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  mrp_gles_renderer.cpp  mrp_gles_renderer.h  mrp_renderer.cpp  mrp_renderer.h  mrp_vulkan_renderer.cpp  mrp_vulkan_renderer.h  napi_init.cpp
entry/src/main/cpp/third_party_fluidsynth/: README.md  build-fluidsynth-ohos-windows.ps1
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/unicorn/: CMakeLists.txt
entry/src/main/cpp/vmrp/: bridge.c  debug.c  fileLib.c  gbk_conv.c  gbk_conv.h  harmony_midi_audio.h  harmony_midi_audio_native.c  harmony_midi_audio_stub.c  harmony_vibrator.c  harmony_vibrator.h  main.c  memory.c  network.c  platform_harmony.c  platform_harmony.h  rbtree.c  vmrp.c
entry/src/main/cpp/vmrp/header/: bridge.h  fileLib.h  rbtree.h  utils.h  vmrp.h
entry/src/main/cpp/vmrp/mythroad/: encode.c
entry/src/main/cpp/vmrp/mythroad/include/: type.h
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  MrpList.ets  OpenSourceNotices.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
openspec/changes/archive/2026-04-16-port-vmrp/: README.md  tasks.md
openspec/changes/archive/2026-04-16-port-vmrp/specs/vmrp-input/: spec.md
openspec/changes/archive/2026-04-17-port-vmrp/specs/vmrp-core/: spec.md
openspec/changes/archive/2026-04-17-port-vmrp/specs/vmrp-timer/: spec.md
openspec/changes/archive/2026-04-18-fix-gbk-path-encoding/: tasks.md
openspec/changes/archive/2026-04-18-fix-gbk-path-encoding/specs/path-encoding/: spec.md
openspec/changes/archive/2026-04-23-fix-gles-pbuffer-fallback/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-fix-gles-pbuffer-fallback/specs/: no-spec-changes.md
openspec/changes/archive/2026-04-23-gles-rgb565-direct-texture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-gles-rgb565-direct-texture/specs/: no-spec-changes.md
openspec/changes/archive/2026-04-23-nativewindow-rgb565-direct/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-nativewindow-rgb565-direct/specs/nativewindow-rgb565/: spec.md
openspec/changes/archive/2026-04-23-vulkan-renderer-backend/: design.md  tasks.md
openspec/changes/archive/2026-04-23-vulkan-renderer-backend/specs/vulkan-renderer/: spec.md
openspec/changes/fix-gbk-path-encoding/: design.md  proposal.md
openspec/changes/harmony-realtime-midi-audio/: design.md  proposal.md  tasks.md
openspec/changes/harmony-realtime-midi-audio/specs/harmony-midi-playback/: spec.md
openspec/changes/native-mrp-launcher/: design.md  proposal.md  tasks.md
openspec/changes/native-mrp-launcher/specs/mrp-native-list/: spec.md
openspec/changes/port-vmrp/: design.md  proposal.md  tasks.md
openspec/changes/port-vmrp/specs/unicorn-engine/: spec.md
openspec/changes/port-vmrp/specs/vmrp-rendering/: spec.md
openspec/changes/port-vmrp/specs/vmrp-resources/: spec.md
openspec/changes/vulkan-renderer-backend/: proposal.md  tasks.md
openspec/specs/path-encoding/: spec.md
openspec/specs/unicorn-engine/: spec.md
openspec/specs/vmrp-core/: spec.md
openspec/specs/vmrp-input/: spec.md
openspec/specs/vmrp-rendering/: spec.md
openspec/specs/vmrp-resources/: spec.md
openspec/specs/vmrp-timer/: spec.md
screenshot/: full_dump_mrpohos_20260417095513776.json  simple_dump_mrpohos_20260417140315741.txt
